--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,5 @@ jobs:
     uses: causaliq/causaliq/.github/workflows/shared-ci.yml@main
     with:
       python-versions: '["3.11"]'
-      operating-systems: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+      operating-systems: '["ubuntu-latest"]'
       package-name: "causaliq-workflow"
