feat: add support for Python 3.13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,6 @@ jobs:
   ci:
     uses: causaliq/causaliq/.github/workflows/shared-ci.yml@main
     with:
-      python-versions: '["3.11"]'
-      operating-systems: '["ubuntu-latest"]'
+      python-versions: '["3.9", "3.10", "3.11", "3.12", "3.13"]'
+      operating-systems: '["ubuntu-latest", "macos-latest", "windows-latest"]'
       package-name: "causaliq-workflow"
