--- a/tests/functional/fixtures/test_action/pyproject.toml
+++ b/tests/functional/fixtures/test_action/pyproject.toml
@@ -7,13 +7,12 @@ name = "test_action"
 version = "1.0.0"
 description = "Test action package for causaliq-workflow"
 authors = [{name = "CausalIQ", email = "info@causaliq.com"}]
-license = {text = "MIT"}
+license = "MIT"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
