--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,9 @@ where = ["src"]
 [tool.setuptools.package-dir]
 "" = "src"
 
+[tool.setuptools.package-data]
+causaliq_workflow = ["schemas/*.json"]
+
 [tool.pytest.ini_options]
 minversion = "7.0"
 addopts = "-ra -q --strict-markers --cov=causaliq_workflow --cov-report=term-missing --cov-report=html"
