--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,4 @@ jobs:
       python-versions: '["3.9", "3.10", "3.11", "3.12", "3.13"]'
       operating-systems: '["ubuntu-latest", "macos-latest", "windows-latest"]'
       package-name: "causaliq-workflow"
+      extra-index-url: "https://test.pypi.org/simple/"
